--- a/client/src/Projects/Project.json
+++ b/client/src/Projects/Project.json
@@ -3,6 +3,7 @@
 		{
 			"Name": "Chat",
 			"Description": "This chat application, developed as my first major undertaking, leverages a host of modern technologies, including React, Node.js, WebSockets, and MySQL for seamless user authentication, real-time messaging, and secure password hashing. The project also employed AWS for deployment, all combined to create a robust and responsive web app.",
+			"GitHubLink": "https://github.com/TuckerWhitaker/Chat",
 			"Column1": {
 				"DescriptionTitles": [
 					"Personal and Professional Development",
@@ -39,6 +40,7 @@
 		{
 			"Name": "Algorithm Visualizer",
 			"Description": "This site offers visual demonstrations of algorithms in action, breaking down the intricacies of Sorting, Search, and Pathfinding algorithms for easy comprehension. By pairing visual elements and animations with real-time code display, users can follow algorithms step by step. Building this project honed my frontend skills, introducing me to innovative techniques and design strategies.",
+			"GitHubLink": "https://github.com/TuckerWhitaker/AlgorithmVisualizer",
 			"Column1": {
 				"DescriptionTitles": [
 					"Deep Dive into Frontend Development",
