--- a/client/src/Projects/Project.json
+++ b/client/src/Projects/Project.json
@@ -1,6 +1,84 @@
 {
 	"Projects": [
 		{
+			"Name": "Algorithm Visualizer",
+			"Description": "This site offers visual demonstrations of algorithms in action, breaking down the intricacies of Sorting, Search, and Pathfinding algorithms for easy comprehension. By pairing visual elements and animations with real-time code display, users can follow algorithms step by step. Building this project honed my frontend skills, introducing me to innovative techniques and design strategies.",
+			"GitHubLink": "https://github.com/TuckerWhitaker/AlgorithmVisualizer",
+			"VideoLink": "https://www.youtube.com/embed/3GPC2vz5MB0",
+			"Live": true,
+			"Column1": {
+				"DescriptionTitles": [
+					"Deep Dive into Frontend Development",
+					"Visual Learning and Algorithm Comprehension",
+					"Real-time Code Display Mechanics",
+					"Innovative Techniques and Strategies",
+					"In-depth Understanding of Algorithms",
+					"Project Design and Execution"
+				],
+				"DescriptionParagraphs": [
+					"Building the Algorithm Visualizer required me to delve deeply into the intricacies of frontend development. This process enriched my skills and pushed the boundaries of what I thought was possible.",
+					"By offering visual demonstrations, I realized the power of visualization in breaking down and understanding complex topics. Watching algorithms in action made them much more digestible and easier to understand for all users.",
+					"One of the standout features was the real-time code display. As the visual representation progressed, the corresponding code was highlighted. This synchronization required careful attention to detail and a profound understanding of both the algorithm's logic and the frontend tools used.",
+					"This project introduced me to a myriad of innovative techniques and design strategies. I had to think outside the box to present information in a way that was both engaging and educational.",
+					"A deep dive into the workings of Sorting, Search, and Pathfinding algorithms was essential. It was crucial to understand not just how they work, but also the rationale behind each step, ensuring that users received a comprehensive learning experience.",
+					"Designing and executing this project from scratch was a valuable learning experience. Every design choice, animation, and interactive element was carefully considered to make the visualizer as informative and user-friendly as possible."
+				]
+			},
+			"Column2": {
+				"DescriptionTitles": [
+					"Visual Integration with Algorithms",
+					"Highlighting Code in Real-time",
+					"Frontend Skills Enhancement",
+					"Design Strategy Implementation"
+				],
+				"DescriptionParagraphs": [
+					"The task of visualizing algorithms required a deep understanding of the logic and flow of each algorithm. Creating an intuitive visual representation that simplifies the algorithm's complexities for users was challenging. I dove deep into the core principles behind each algorithm, ensuring that the animations and visual elements captured the essence of each step.",
+					"One of the pivotal challenges was highlighting code corresponding to the currently executing algorithm step. This required a synchronization between the visual animations and the underlying code. After multiple iterations and testing, I was able to create a seamless interaction where the visual representation matched perfectly with the highlighted code, giving users a comprehensive view of the algorithm's operation.",
+					"Enhancing my frontend skills was paramount to the success of this project. I was introduced to numerous innovative techniques and tools. This process was a learning curve, as I had to familiarize myself with new tools and methodologies, ensure compatibility across browsers, and optimize for performance. This experience greatly bolstered my frontend development capabilities.",
+					"The visual representation of algorithms not only required accurate depiction but also a user-friendly design strategy. Implementing these strategies meant ensuring that users, regardless of their algorithmic background, could grasp the essence of the operations. The design challenge lay in keeping the interface clean, intuitive, and engaging, which I addressed by constantly iterating based on user feedback and best design practices."
+				]
+			}
+		},
+		{
+			"Name": "Ecommerce Site",
+			"Description": "This e-commerce site utilizes React's dynamic frontend and Stripe's secure payment processing, supported by MongoDB's efficient data storage for diverse products and user profiles. This blend enhances both user experience and backend operations, underscoring my insights into full-stack development and the synergy of aesthetics and functionality.",
+			"GitHubLink": "https://github.com/TuckerWhitaker/Store",
+			"VideoLink": "https://www.youtube.com/embed/7tpljXnpEPQ",
+			"Live": false,
+			"Column1": {
+				"DescriptionTitles": [
+					"Personal and Professional Development",
+					"Full-stack Development Mastery",
+					"Version Control with Git and GitHub",
+					"Utilizing MongoDB for Efficient Data Storage",
+					"Responsive Web Design with React",
+					"Secure Payment Processing with Stripe"
+				],
+				"DescriptionParagraphs": [
+					"The project represented a significant leap in my personal and professional development, showcasing my capacity to handle complex, multi-layered projects that cater to both frontend and backend requirements.",
+					"Through this e-commerce site, I gained comprehensive insights into full-stack development, demonstrating the synergy of aesthetics and functionality. My ability to integrate various technologies and platforms testifies to my holistic approach in creating seamless digital solutions.",
+					"Git and GitHub became indispensable tools for source control. Through repeated use, I became adept at tracking changes, collaborating, and managing different versions of the project.",
+					"The project's use of MongoDB marked my proficiency in efficiently storing diverse products and user profiles. Understanding and implementing MongoDB's robust features allowed me to set up a scalable and efficient backend data structure, optimizing the site's overall performance.",
+					"Leveraging React's dynamic frontend capabilities was a cornerstone of the project. By diving deep into React, I ensured a smooth and responsive user experience, making the site adaptable to various devices and screen sizes.",
+					"Integrating Stripe for payment processing was crucial for the e-commerce platform's success. This not only enhanced the user experience by providing a secure and efficient payment gateway but also underscored my expertise in integrating third-party services into my development projects."
+				]
+			},
+			"Column2": {
+				"DescriptionTitles": [
+					"React's Dynamic Frontend Integration",
+					"Stripe Payment Processing",
+					"MongoDB Data Storage Implementation",
+					"Responsive Web App Development"
+				],
+				"DescriptionParagraphs": [
+					"Integrating a dynamic frontend using React presented several challenges. Ensuring seamless state management and effective rendering of components was paramount. Through diligent debugging and leveraging React's vast ecosystem, I managed to achieve a smooth, dynamic interface that enhances the user experience.",
+					"Implementing Stripe for secure payment processing was a crucial aspect of the project. Understanding Stripe's API and ensuring a secure environment for transactional data was initially challenging. However, by diving deep into Stripe's documentation and consulting their community, I successfully integrated it, ensuring a seamless and secure transaction for users.",
+					"MongoDB, with its flexible schema and scalability features, was chosen as the database for the e-commerce site. The challenges included setting up efficient data models, handling complex queries, and ensuring data integrity. By utilizing MongoDB's extensive documentation and tools, I overcame these challenges, ensuring a robust backend storage for products and user profiles.",
+					"Developing a responsive web application was essential given the diversity of devices users might access the site from. Making the e-commerce site adaptable and visually appealing across various screen sizes was a challenge. With a deeper understanding of CSS, media queries, and modern frontend frameworks, I achieved a responsive design that caters to a broad range of devices, enhancing overall user accessibility."
+				]
+			}
+		},
+		{
 			"Name": "Chat",
 			"Description": "This chat application, developed as my first major undertaking, leverages a host of modern technologies, including React, Node.js, WebSockets, and MySQL for seamless user authentication, real-time messaging, and secure password hashing. The project also employed AWS for deployment, all combined to create a robust and responsive web app.",
 			"GitHubLink": "https://github.com/TuckerWhitaker/Chat",
@@ -36,85 +114,6 @@
 					"Navigating the server was a challenge due to my basic Linux skills. Through persistence and active learning, I improved my understanding of Linux commands, file systems, and permissions, eventually managing to effectively navigate the server and perform necessary operations.",
 					"Databases, while an essential component of the project, initially presented a steep learning curve. My prior experience with databases was limited, making the setup, configuration, and usage of MySQL a challenge. I faced difficulties with SQL syntax, data modelling, and performance tuning. However, by reading documentation, following tutorials, and hands-on practice, I managed to overcome these hurdles and integrate MySQL effectively into the project.",
 					"Another noteworthy challenge was building a responsive web app. As the chat app was designed to be used on a variety of devices, it was crucial to ensure the layout and functionality worked well across different screen sizes. This involved learning more about CSS, media queries, and flexible layouts, which was initially challenging but ultimately rewarding as the final product became highly adaptable and user-friendly."
-				]
-			}
-		},
-		{
-			"Name": "Algorithm Visualizer",
-			"Description": "This site offers visual demonstrations of algorithms in action, breaking down the intricacies of Sorting, Search, and Pathfinding algorithms for easy comprehension. By pairing visual elements and animations with real-time code display, users can follow algorithms step by step. Building this project honed my frontend skills, introducing me to innovative techniques and design strategies.",
-			"GitHubLink": "https://github.com/TuckerWhitaker/AlgorithmVisualizer",
-			"VideoLink": "https://www.youtube.com/embed/-ODwxHFS-Ug",
-			"Live": true,
-			"Column1": {
-				"DescriptionTitles": [
-					"Deep Dive into Frontend Development",
-					"Visual Learning and Algorithm Comprehension",
-					"Real-time Code Display Mechanics",
-					"Innovative Techniques and Strategies",
-					"In-depth Understanding of Algorithms",
-					"Project Design and Execution"
-				],
-				"DescriptionParagraphs": [
-					"Building the Algorithm Visualizer required me to delve deeply into the intricacies of frontend development. This process enriched my skills and pushed the boundaries of what I thought was possible.",
-					"By offering visual demonstrations, I realized the power of visualization in breaking down and understanding complex topics. Watching algorithms in action made them much more digestible and easier to understand for all users.",
-					"One of the standout features was the real-time code display. As the visual representation progressed, the corresponding code was highlighted. This synchronization required careful attention to detail and a profound understanding of both the algorithm's logic and the frontend tools used.",
-					"This project introduced me to a myriad of innovative techniques and design strategies. I had to think outside the box to present information in a way that was both engaging and educational.",
-					"A deep dive into the workings of Sorting, Search, and Pathfinding algorithms was essential. It was crucial to understand not just how they work, but also the rationale behind each step, ensuring that users received a comprehensive learning experience.",
-					"Designing and executing this project from scratch was a valuable learning experience. Every design choice, animation, and interactive element was carefully considered to make the visualizer as informative and user-friendly as possible."
-				]
-			},
-			"Column2": {
-				"DescriptionTitles": [
-					"Visual Integration with Algorithms",
-					"Highlighting Code in Real-time",
-					"Frontend Skills Enhancement",
-					"Design Strategy Implementation"
-				],
-				"DescriptionParagraphs": [
-					"The task of visualizing algorithms required a deep understanding of the logic and flow of each algorithm. Creating an intuitive visual representation that simplifies the algorithm's complexities for users was challenging. I dove deep into the core principles behind each algorithm, ensuring that the animations and visual elements captured the essence of each step.",
-					"One of the pivotal challenges was highlighting code corresponding to the currently executing algorithm step. This required a synchronization between the visual animations and the underlying code. After multiple iterations and testing, I was able to create a seamless interaction where the visual representation matched perfectly with the highlighted code, giving users a comprehensive view of the algorithm's operation.",
-					"Enhancing my frontend skills was paramount to the success of this project. I was introduced to numerous innovative techniques and tools. This process was a learning curve, as I had to familiarize myself with new tools and methodologies, ensure compatibility across browsers, and optimize for performance. This experience greatly bolstered my frontend development capabilities.",
-					"The visual representation of algorithms not only required accurate depiction but also a user-friendly design strategy. Implementing these strategies meant ensuring that users, regardless of their algorithmic background, could grasp the essence of the operations. The design challenge lay in keeping the interface clean, intuitive, and engaging, which I addressed by constantly iterating based on user feedback and best design practices."
-				]
-			}
-		},
-
-		{
-			"Name": "Ecommerce Site",
-			"Description": "This e-commerce site utilizes React's dynamic frontend and Stripe's secure payment processing, supported by MongoDB's efficient data storage for diverse products and user profiles. This blend enhances both user experience and backend operations, underscoring my insights into full-stack development and the synergy of aesthetics and functionality.",
-			"GitHubLink": "https://github.com/TuckerWhitaker/Store",
-			"VideoLink": "https://youtu.be/-ODwxHFS-Ug",
-			"Live": false,
-			"Column1": {
-				"DescriptionTitles": [
-					"Personal and Professional Development",
-					"Full-stack Development Mastery",
-					"Version Control with Git and GitHub",
-					"Utilizing MongoDB for Efficient Data Storage",
-					"Responsive Web Design with React",
-					"Secure Payment Processing with Stripe"
-				],
-				"DescriptionParagraphs": [
-					"The project represented a significant leap in my personal and professional development, showcasing my capacity to handle complex, multi-layered projects that cater to both frontend and backend requirements.",
-					"Through this e-commerce site, I gained comprehensive insights into full-stack development, demonstrating the synergy of aesthetics and functionality. My ability to integrate various technologies and platforms testifies to my holistic approach in creating seamless digital solutions.",
-					"Git and GitHub became indispensable tools for source control. Through repeated use, I became adept at tracking changes, collaborating, and managing different versions of the project.",
-					"The project's use of MongoDB marked my proficiency in efficiently storing diverse products and user profiles. Understanding and implementing MongoDB's robust features allowed me to set up a scalable and efficient backend data structure, optimizing the site's overall performance.",
-					"Leveraging React's dynamic frontend capabilities was a cornerstone of the project. By diving deep into React, I ensured a smooth and responsive user experience, making the site adaptable to various devices and screen sizes.",
-					"Integrating Stripe for payment processing was crucial for the e-commerce platform's success. This not only enhanced the user experience by providing a secure and efficient payment gateway but also underscored my expertise in integrating third-party services into my development projects."
-				]
-			},
-			"Column2": {
-				"DescriptionTitles": [
-					"React's Dynamic Frontend Integration",
-					"Stripe Payment Processing",
-					"MongoDB Data Storage Implementation",
-					"Responsive Web App Development"
-				],
-				"DescriptionParagraphs": [
-					"Integrating a dynamic frontend using React presented several challenges. Ensuring seamless state management and effective rendering of components was paramount. Through diligent debugging and leveraging React's vast ecosystem, I managed to achieve a smooth, dynamic interface that enhances the user experience.",
-					"Implementing Stripe for secure payment processing was a crucial aspect of the project. Understanding Stripe's API and ensuring a secure environment for transactional data was initially challenging. However, by diving deep into Stripe's documentation and consulting their community, I successfully integrated it, ensuring a seamless and secure transaction for users.",
-					"MongoDB, with its flexible schema and scalability features, was chosen as the database for the e-commerce site. The challenges included setting up efficient data models, handling complex queries, and ensuring data integrity. By utilizing MongoDB's extensive documentation and tools, I overcame these challenges, ensuring a robust backend storage for products and user profiles.",
-					"Developing a responsive web application was essential given the diversity of devices users might access the site from. Making the e-commerce site adaptable and visually appealing across various screen sizes was a challenge. With a deeper understanding of CSS, media queries, and modern frontend frameworks, I achieved a responsive design that caters to a broad range of devices, enhancing overall user accessibility."
 				]
 			}
 		}
